syntax = "proto2";
package message;

message heartbeat_toS {}

message heartbeat_toC {}
