syntax = "proto2";
package message;
import "common.proto";

message reconnect_toS {
	required string userID = 1;
	required string token  = 2;	
}

message reconnect_toC {
	required EnumType code  = 1;	
}
