syntax = "proto2";
package ssmessage;

message ssToGateError {
	optional uint32 guid = 1;
}
